# WikiWormhole

./: .gitignore  README.md  config.yaml  install_wikiwormhole.py  pyproject.toml  requirements.txt  setup.cfg  setup_config.py  setup_wikiapi.py  setup_wormhole.py  test.py
src/: connect.py  constants.py  fetch.py  setup.py  title2vec.py  wikiapi.py
src/api/: connect.py  pageviews.py  wikipage.py
src/embed/: title2vec.py  word2vec.py
src/score/: popular.py  similar.py
src/traversal/: connector.py  popular.py  similar.py  traverse.py
src/traverse/: graph.py  popular.py  similar.py  table.py  traverse.py
src/util/: sinkset.py
src/wikiapi/: pageviews.py  wikipage.py
src/wikiwormhole/: constants.py  title2vec.py  wikiapi.py
src/wikiwormhole/traverse/: popular.py  similar.py  traverse.py
