[metadata]

name = "wikiwormhole"
version = 0.0.1
author = Jason Pittman
author_email = "jspencerpittman@gmail.com"
description = A library for finding the link between two wikipedia pages.
long_description = file: README.md

[options]
install_requires = 
    gensim ==4.3
    nltk ==3.8
    numpy
    pywikibot ==9.0
    requests
    PyYaml ==6.0

python_requires = >=3.6